--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  steps: ^1.0.1
+#  steps: ^1.0.1
   url_launcher: ^6.1.10
   font_awesome_flutter: ^10.4.0
   scroll_to_index: ^3.0.1
